# OGL_tests

./: CMakeLists.txt  build
files/: CMakeLists_1.txt
src/10_3D_surface/: CMakeLists.txt
src/10_3D_surface/src/: main.cpp  shader.hpp
src/11_3D_cube/: CMakeLists.txt
src/11_3D_cube/src/: main.cpp
src/12_3D_cubes/: CMakeLists.txt
src/12_3D_cubes/src/: main.cpp
src/13_Camera_round/: CMakeLists.txt
src/13_Camera_round/src/: main.cpp
src/14_Camera_walk/: CMakeLists.txt
src/14_Camera_walk/src/: auxiliar.hpp  camera.cpp  camera.hpp  main.cpp
src/15_Camera_walk_class/: CMakeLists.txt
src/15_Camera_walk_class/shaders/: fragmentShader.fs
src/15_Camera_walk_class/src/: main.cpp
src/16_Colors/: CMakeLists.txt
src/16_Colors/shaders/: lightSourceFragS.fs  lightingFragS.fs  vertexShader.vs
src/16_Colors/src/: main.cpp
src/17_Phong_1/: CMakeLists.txt
src/17_Phong_1/shaders/: lightingFragS.fs
src/17_Phong_1/src/: auxiliar.cpp  main.cpp
src/18_Phong_2/: CMakeLists.txt
src/18_Phong_2/src/: auxiliar.cpp  auxiliar.hpp  main.cpp
src/1_Window/: CMakeLists.txt
src/1_Window/src/: main.cpp
src/2_Triangle/: CMakeLists.txt
src/2_Triangle/src/: main.cpp
src/3_Indexes/: CMakeLists.txt
src/3_Indexes/src/: main.cpp
src/4_Shaders_Uniforms/: CMakeLists.txt
src/4_Shaders_Uniforms/src/: main.cpp
src/5_More_attributes/: CMakeLists.txt
src/5_More_attributes/src/: auxiliar.hpp  main.cpp
src/6_Shader_class/: CMakeLists.txt
src/6_Shader_class/shaders/: fragmentShader.fs
src/6_Shader_class/src/: main.cpp  shader.cpp  shader.hpp
src/7_Textures/: CMakeLists.txt
src/7_Textures/shaders/: fragmentShader.fs
src/7_Textures/src/: auxiliar.cpp  main.cpp
src/8_Texture_units/: CMakeLists.txt
src/8_Texture_units/shaders/: fragmentShader.fs
src/8_Texture_units/src/: main.cpp
src/9_Transformations/: CMakeLists.txt
src/9_Transformations/src/: main.cpp
