# cd /home/username/dev/visual/_BUILD
# cmake -G"Unix Makefiles" ..
# cmake -G"Visual Studio 15 2017 Win64" ..
# cmake -G"Visual Studio 15 2017 Win32" ..

CMAKE_MINIMUM_REQUIRED (VERSION 3.12)
PROJECT (OGL_tests)

#ADD_SUBDIRECTORY(${CMAKE_CURRENT_SOURCE_DIR}/extern/glew/glew-2.1.0/build/cmake)
ADD_SUBDIRECTORY(${CMAKE_CURRENT_SOURCE_DIR}/extern/glfw/glfw-3.3.2)
#ADD_SUBDIRECTORY(${CMAKE_CURRENT_SOURCE_DIR}/extern/glm/glm-0.9.9.5)

ADD_SUBDIRECTORY(${CMAKE_CURRENT_SOURCE_DIR}/src/1_Window)
ADD_SUBDIRECTORY(${CMAKE_CURRENT_SOURCE_DIR}/src/2_Triangle)
ADD_SUBDIRECTORY(${CMAKE_CURRENT_SOURCE_DIR}/src/3_Indexes)
ADD_SUBDIRECTORY(${CMAKE_CURRENT_SOURCE_DIR}/src/4_Shaders_Uniforms)
ADD_SUBDIRECTORY(${CMAKE_CURRENT_SOURCE_DIR}/src/5_More_attributes)
ADD_SUBDIRECTORY(${CMAKE_CURRENT_SOURCE_DIR}/src/6_Shader_class)
ADD_SUBDIRECTORY(${CMAKE_CURRENT_SOURCE_DIR}/src/7_Textures)
ADD_SUBDIRECTORY(${CMAKE_CURRENT_SOURCE_DIR}/src/8_Texture_units)
ADD_SUBDIRECTORY(${CMAKE_CURRENT_SOURCE_DIR}/src/9_Transformations)
ADD_SUBDIRECTORY(${CMAKE_CURRENT_SOURCE_DIR}/src/10_3D_surface)
ADD_SUBDIRECTORY(${CMAKE_CURRENT_SOURCE_DIR}/src/11_3D_cube)
ADD_SUBDIRECTORY(${CMAKE_CURRENT_SOURCE_DIR}/src/12_3D_cubes)
ADD_SUBDIRECTORY(${CMAKE_CURRENT_SOURCE_DIR}/src/13_Camera_round)
ADD_SUBDIRECTORY(${CMAKE_CURRENT_SOURCE_DIR}/src/14_Camera_walk)
ADD_SUBDIRECTORY(${CMAKE_CURRENT_SOURCE_DIR}/src/15_Camera_walk_class)
ADD_SUBDIRECTORY(${CMAKE_CURRENT_SOURCE_DIR}/src/16_Colors)
ADD_SUBDIRECTORY(${CMAKE_CURRENT_SOURCE_DIR}/src/17_Phong_1)
ADD_SUBDIRECTORY(${CMAKE_CURRENT_SOURCE_DIR}/src/18_Phong_2)
